fixed form styling on mobile.

--- a/stylesheets/content-blocks.less
+++ b/stylesheets/content-blocks.less
@@ -115,7 +115,7 @@
 				}
 
 				button {
-					margin: 8px;
+					margin: 6px;
 				}
 			}
 		}
