--- a/stylesheets/style.less
+++ b/stylesheets/style.less
@@ -144,5 +144,10 @@ h6 {
 			fill: @primary;
 			pointer-events: none;
 		}
+
+		svg {
+			position: relative;
+			top: var(--svg-top);
+		}
 	}
 }
