--- a/stylesheets/variables.less
+++ b/stylesheets/variables.less
@@ -30,6 +30,7 @@
 	--cider-left: -24px;
 
 	--form-line: 6px;
+	--svg-top: 0;
 }
 
 @media screen and (max-width: 780px) {
@@ -54,6 +55,7 @@
 		--cider-left: -20px;
 
 		--form-line: 4px;
+		--svg-top: -8px;
 	}
 }
 
@@ -79,6 +81,7 @@
 		--cider-left: -16px;
 
 		--form-line: 4px;
+		//--svg-top: -8px;
 	}
 }
 
@@ -104,5 +107,6 @@
 		--cider-left: -12px;
 
 		--form-line: 4px;
+		//--svg-top: 0;
 	}
 }
